--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="greenLevel1">#f6fff8</color>
+    <color name="greenLevel2">#eaf4f4</color>
+    <color name="greenLevel3">#cce3de</color>
+    <color name="greenLevel4">#a4c3b2</color>
+    <color name="greenLevel5">#6b9080</color>
 </resources>
