--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,12 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tvInput"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:background="@color/greenLevel2"
         android:gravity="end|bottom"
         android:padding="10dp"
-        android:text="@string/calc_text"
         android:textSize="48sp" />
 
     <LinearLayout
@@ -29,6 +29,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_7"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -39,6 +40,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_8"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -49,6 +51,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_9"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -59,6 +62,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/Divide"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
@@ -77,6 +81,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_4"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -87,6 +92,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_5"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -97,6 +103,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_6"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -107,6 +114,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/Multiply"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
@@ -125,6 +133,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_1"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -135,6 +144,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_2"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -145,6 +155,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_3"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -155,6 +166,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/Subtract"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
@@ -173,6 +185,7 @@
             android:layout_weight="2"
             android:onClick="onDigit"
             android:text="@string/_0"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -181,8 +194,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="onDigit"
+            android:onClick="onCLear"
             android:text="@string/clr"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
         <Button
@@ -193,6 +207,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/plus"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
@@ -211,6 +226,7 @@
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/equal"
+            android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
