Adding the OnOperator Functionality using Contains and StartsWith on Strings

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:text="@string/Divide"
             android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
@@ -112,7 +112,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:text="@string/Multiply"
             android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
@@ -164,7 +164,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:text="@string/Subtract"
             android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
@@ -216,7 +216,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:text="@string/plus"
             android:textColor="@color/greenLevel1"
             tools:ignore="UsingOnClickInXml" />
